# pcomp

./: README.md  pyproject.toml
.github/workflows/: dbt.yml  enterkomputer_scraper.yml  viraindo-scraper.yml
dbt_pcomp/models/: enterkomputer.sql
scraping/: enterkomputer.py  viraindo.py
